--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
+    "cron": "^2.0.0",
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
     "sequelize": "^6.20.0",
