--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
+    "adm-zip": "^0.5.9",
     "cron": "^2.0.0",
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
+    "node-fetch": "^3.2.4",
     "sequelize": "^6.20.0",
     "sqlite3": "^5.0.8"
   }
