--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
     "node-fetch": "^3.2.4",
+    "playwright": "^1.22.2",
     "sequelize": "^6.20.0",
     "sqlite3": "^5.0.8"
   }
