--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-fetch": "^3.2.4",
     "playwright": "^1.22.2",
     "sequelize": "^6.20.0",
+    "sharp": "^0.30.6",
     "sqlite3": "^5.0.8"
   }
 }
